# openai_prac

./: pyproject.toml
chapter02/: basic.py  basic_api.py
chapter03/: basic_intent.py
webapp/: chat.py
