[tool.poetry]
name = "text-lecture"
version = "0.1.0"
description = ""
authors = ["ansrlgur12 <ansrlgur12@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9.8, < 4.0"
openai = "^1.42.0"
fastapi = "^0.112.2"
python-dotenv = "^1.0.1"
streamlit = "^1.38.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
